--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,3 +1,9 @@
 
 $main-color: #2C2C2C;
 $main-grey: #E0E0E0;
+$main-blue: #18A0FB;
+
+$blue-disabled: rgba(24, 160, 251, .3);
+$blue-hover: rgba(24, 160, 251, .8);
+
+$min-modal-width: 221px;
