--- a/src/sass/blocks/_aside.scss
+++ b/src/sass/blocks/_aside.scss
@@ -5,7 +5,7 @@
    border-right: 1px solid #979797;
    &__search{
       position: relative;
-      margin-bottom: 125px;
+      margin-bottom: 120px;
       &::before{
          content: '';
          width: 15px;
@@ -19,8 +19,40 @@
    }
    &__label{
       width: 100%;
+      margin-bottom: 25px;
    }
-   &__select{
-      margin-top: 5px;
+   &__label>span{
+      display: inline-block;
+      font-weight: 500;
+      margin-bottom: 5px;
+   }
+   &__tags{
+      height: 210px;
+      overflow-y: scroll;
+      &::-webkit-scrollbar{
+         width: 5px;
+      }
+      &::-webkit-scrollbar-track{
+         background-color: rgba(44, 44, 44, 0.2);
+         border-radius: 10px;
+      }
+      &::-webkit-scrollbar-thumb{
+         background-color: rgba(44, 44, 44, 0.3);
+         border-radius: 10px;
+         cursor: pointer;
+         &:hover{
+               background-color: rgba(44, 44, 44, 0.45);
+         }
+         &:active{
+               background-color: rgba(44, 44, 44, 0.6);
+         }
+      }
+   }
+   &__tag-wrapper{
+      list-style: none;
+   }
+   &__tag{
+      display: inline-block;
+      margin-bottom: 7px;
    }
 }
