--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -26,3 +26,7 @@
 @import 'blocks/aside';
 @import 'blocks/input';
 @import 'blocks/select';
+@import 'blocks/tag';
+@import 'blocks/main';
+@import 'blocks/respondents-list';
+@import 'blocks/button';
