--- a/src/scss/blocks/_respondents-list.scss
+++ b/src/scss/blocks/_respondents-list.scss
@@ -1,8 +1,11 @@
 .respondents-list{
-   width: 1190px;
+   width: 100%;
    border-radius: 5px;
    border: 1px solid $main-grey;
    table-layout: fixed;
+   tbody{
+      position: relative;
+   }
    tr{
       height: 47px;
       border-bottom: 1px solid $main-grey;
@@ -15,34 +18,47 @@
       overflow-x: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
+      box-sizing: content-box;
 
+      //Галочка
       &:nth-child(1){
-         width: 53px;
+         width: 16px;
          padding-left: 14px;
       }
+      //ФИО
       &:nth-child(2){
-         width: 254px;
       }
+      //Пол
       &:nth-child(3){
-         width: 47px;
+         width: 26px;
       }
+      //Возраст
       &:nth-child(4){
-         width: 75px;
+         width: 55px;
       }
+      //Образование
       &:nth-child(5){
-         width: 110px;
+         width: 90px;
       }
+      //Место жительства
       &:nth-child(6){
-         width: 146px;
+         width: 130px;
       }
+      //Семейное положение
       &:nth-child(7){
-         width: 165px;
+         width: 145px;
       }
+      //Телефон
       &:nth-child(8){
-         width: 133px;
+         width: 115px;
       }
+      //Тэги
+      &:nth-child(9){
+         // background-color: red;
+      }
+      //Опции
       &:last-child{
-         width: 40px;
+         width: 24px;
          padding-right: 15px;
       }
    }
@@ -51,23 +67,18 @@
       margin-bottom: 0;
       transform: translateY(2px);
    }
-   &__input{
-      display: none;
-      &:checked+div{
-         border: none;
-         background-image: url('../../resourses/icons/checked.svg');
+   .more-functions{
+      width: 24px;
+      height: 24px;
+      background-color: transparent;
+      svg{
+         width: 16px;
+         height: 4px;
+         fill: $main-grey;
+         pointer-events: none;
+      }
+      &:hover svg{
+         fill: rgba($color: #2C2C2C, $alpha: 0.4);
       }
    }
-   &__chekbox{
-      border: 1px solid $main-grey;
-      box-sizing: border-box;
-      border-radius: 4px;
-      width: 16px;
-      height: 16px;
-      cursor: pointer;
-   }
-   .more-functions{
-      cursor: pointer;
-   }
-   
 }
