--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -1,9 +1,11 @@
 $main-color: #2C2C2C;
 $main-grey: #E0E0E0;
 $main-blue: #18A0FB;
+$main-red: #FF3E1D;
+$dark-grey: #585858;
 
 $blue-disabled: rgba(24, 160, 251, .3);
-$blue-hover: rgba(24, 160, 251, .8);
-$dark-grey: #585858;
+$blue-hover: #18a0fbcc;
+$red-hover: #ff3f1dcc;
 
 $min-modal-width: 221px;
