--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,11 +1,12 @@
 .header{
    padding: 73px 0px;
    background-color: $main-color;
-   width: 296px;
+   // min-width: 296px;
+   width: 285px;
    height: 100vh;
    color: #FFFFFF;
    position: relative;
-   transition: width .6s; 
+   transition: width .4s; 
    &__arrow{
       position: absolute;
       top: 16px;
@@ -18,7 +19,7 @@
       justify-content: center;
       align-items: center;
       border-radius: 100%;
-      transition: all .6s; 
+      transition: all .4s; 
       svg{
          width: 20px;
          height: 20px;
@@ -35,7 +36,7 @@
       height: 150px;
       overflow: hidden;
       border-radius: 100%;
-      transition: all .6s; 
+      transition: all .4s; 
       img{
          width: 100%;
       }
@@ -44,7 +45,7 @@
       text-align: center;
       margin-top: 15px;
       padding: 0 20px;
-      transition: all .6s; 
+      transition: all .4s; 
    }
 
    &__nav{
@@ -57,7 +58,7 @@
    }
    &__item{
       position: relative;
-      transition: all .6s; 
+      transition: all .4s; 
       &_active{
          background-color: $dark-grey;
       }
@@ -86,7 +87,7 @@
    &__nav-text{
       line-height: 60px;
       opacity: 1;
-      transition: all .6s;
+      transition: all .4s;
    }
 }
 
