--- a/src/scss/blocks/_select.scss
+++ b/src/scss/blocks/_select.scss
@@ -1,11 +1,37 @@
 .select{
-   // font-weight: 400;
+   width: 100%;
    position: relative;
-   &__btn{
-      background-color: #fff;
-      text-align: left;
+   &_open{
+      .select__backdrop{
+         display: block;
+         z-index: 40;
+      }
+      .select__dropdown{
+         display: block;
+         z-index: 50;
+      }
+      .select__input{
+         &::after{
+            transform: translateY(-50%) rotate(180deg);
+         }
+      }
+   }
+   // &_disabled{
+   // }
+   &__input{
+      width: 100%;
       height: 36px;
+      background: #FFFFFF;
+      border: 1px solid $main-grey;
+      padding-left: 14px;
+      display: flex;
+      align-items: center;
       position: relative;
+      cursor: pointer;
+      &:focus{
+         outline: 1px solid $main-color;
+         outline-offset: -1px;
+      }
       &::after{
          content: '';
          width: 11px;
@@ -16,29 +42,47 @@
          right: 14px;
          transform: translateY(-50%);
       }
+      //!!!!
       &_default{
          color: rgba(44, 44, 44, .5);
       }
    }
-   &__list{
+   &__dropdown{
       display: none;
       position: absolute;
+      background: #FFFFFF;
       top: 40px;
       left: 0;
       list-style: none;
       border: 1px solid $main-grey;
       border-radius: 4px;
-      width: $min-modal-width;
+      width: 100%;
+      box-shadow: 0px 10px 23px rgba(0, 0, 0, 0.12);
    }
-   &__list-item{
+   &__item{
       line-height: 36px;
       padding-left: 14px;
       cursor: pointer;
       &:hover{
          color: $main-blue;
       }
+      transition: all .3s;
+      &:hover{
+         background-color: $main-blue;
+         color: white;
+      }
+      &.selected{
+         background-color: $main-blue;
+         color: white;
+      }
    }
-   &__input-hidden{
+   &__backdrop{
       display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      background: transparent;
    }
 }
