--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,7 @@
 }
 .button-reset{
    border: none;
+   background-color: #fff;
    &:focus{
       outline: none;
    }
@@ -30,6 +31,30 @@ a:hover{
    color: inherit;
    text-decoration: none;
 }
+ul{
+   list-style: none;
+   margin: 0;
+}
+.modal-closed{
+   display: none !important;
+}
+// для input type number
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+.visually-hidden {
+   position: absolute;
+   width: 1px;
+   height: 1px;
+   margin: -1px;
+   border: 0;
+   padding: 0;
+   white-space: nowrap;
+   clip-path: inset(100%);
+   clip: rect(0 0 0 0);
+   overflow: hidden;
+ }
 
 
 @import 'blocks/header';
@@ -40,3 +65,6 @@ a:hover{
 @import 'blocks/main';
 @import 'blocks/respondents-list';
 @import 'blocks/button';
+@import 'blocks/popup';
+@import 'blocks/modal';
+@import 'blocks/checkbox';
