Верстка страницы настроек пользователя и проектов с календарем

--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -20,6 +20,7 @@
       align-items: center;
       border-radius: 100%;
       transition: all .4s; 
+      z-index: 50;
       svg{
          width: 20px;
          height: 20px;
