--- a/src/scss/blocks/_settings-aside.scss
+++ b/src/scss/blocks/_settings-aside.scss
@@ -1,5 +1,5 @@
-.aside{
-   padding: 73px 39px;
+.settings-aside{
+   padding: 70px 40px;
    height: 100vh;
    min-width: 338px;
    width: 338px;
