--- a/src/scss/components/_select.scss
+++ b/src/scss/components/_select.scss
@@ -23,6 +23,7 @@
       height: 36px;
       background: #FFFFFF;
       border: 1px solid $main-grey;
+      border-radius: 5px;
       padding-left: 14px;
       display: flex;
       align-items: center;
