--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,7 +43,36 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
-.visually-hidden {
+
+
+//components
+@import 'components/button';
+@import 'components/input';
+@import 'components/select';
+@import 'components/tag';
+@import 'components/popup';
+@import 'components/modal';
+@import 'components/other-modals';//.modal-add-file .
+@import 'components/checkbox';
+@import 'components/accordion';
+@import 'components/calendar';
+@import 'components/recording';
+@import 'components/more-functions-btn';
+
+
+//blocks
+@import 'blocks/header';
+@import 'blocks/settings-aside';
+@import 'blocks/main';
+@import 'blocks/respondents-list';
+@import 'blocks/account-settings';
+@import 'blocks/settings-main';
+@import 'blocks/projects-aside';
+@import 'blocks/moder-calendar';
+@import 'blocks/respond-recordings';
+
+
+.visually-hidden{
    position: absolute;
    width: 1px;
    height: 1px;
@@ -55,16 +84,3 @@ input::-webkit-inner-spin-button {
    clip: rect(0 0 0 0);
    overflow: hidden;
  }
-
-
-@import 'blocks/header';
-@import 'blocks/aside';
-@import 'blocks/input';
-@import 'blocks/select';
-@import 'blocks/tag';
-@import 'blocks/main';
-@import 'blocks/respondents-list';
-@import 'blocks/button';
-@import 'blocks/popup';
-@import 'blocks/modal';
-@import 'blocks/checkbox';
