--- a/src/scss/components/_input.scss
+++ b/src/scss/components/_input.scss
@@ -14,4 +14,9 @@
    &::placeholder{
       color: rgba(44, 44, 44, .5);
    }
+   &_textarea{
+      resize: none;
+      padding: 10px 14px;
+      height: 115px;
+   }
 }
