--- a/src/scss/components/_other-modals.scss
+++ b/src/scss/components/_other-modals.scss
@@ -1,3 +1,4 @@
+//все перечисленные классы находятся в связке с .modal
 .modal-add-file{
    &__content{
       width: 275px;
@@ -31,7 +32,31 @@
       width: 155px;
    }
 }
-
+.modal_respond{
+   &__date{
+      input:first-child{
+         margin-right: 16px;
+         width: 150px;
+      }
+      input:last-child{
+         width: 47px;
+      }
+   }
+   &__tags-input{
+      input{
+         margin-right: 16px;
+      }
+   }
+   &__tag-btn{
+      background-color: $main-blue;
+      border-radius: 5px;
+      padding: 0 10px;
+      svg{
+         width: 16px;
+         height: 16px;
+      }
+   }
+}
 .modal-change-password{
    &__content{
       width: 350px;
@@ -40,5 +65,138 @@
 .modal-share-shedule{
    &__content{
       width: 350px;
+   }
+}
+.modal-new-project{
+   .modal__content{
+      display: none;
+   }
+   &__content_first{
+      width: 558px;
+   }
+   &__content_second{
+      width: 705px;
+   }
+   &__content_third{
+      width: 460px;
+   }
+   &__address{
+      justify-content: space-between;
+      input{
+         width: 300px;
+      }
+      button{
+         width: 185px;
+         height: 38px;
+      }
+   }
+   &__link{
+      align-items: center;
+      span{
+         margin: 0;
+         font-size: 13px;
+         line-height: 16px;
+         margin-right: 8px;
+      }
+   }
+   &__calendar{
+      margin-bottom: 32px;
+   }
+   &__top{
+      display: flex;
+      justify-content: space-between;
+      position: relative;
+   }
+   &__copy-schedule{
+      top: 36px;
+      right: 0;
+   }
+   &__project-link{
+      display: block;
+      margin-bottom: 32px;
+      color: $main-color;
+      transition: all .3s;
+      &:hover{
+         color: $main-blue;
+      }
+   }
+   &__project-name{
+      margin-bottom: 16px;
+      span{
+         font-size: inherit;
+         color: $main-blue;
+      }
+   }
+   &__google-import{
+      white-space: nowrap;
+      top: 48px;
+      right: -24px;
+   }
+}
+.modal-customer-schedule{
+   .modal__content{
+      display: none;
+   }
+   &__content_1{
+      width: 460px;
+   }
+   &__content_3{
+      width: 706px;
+      .progress__line-active{
+         width: 50%;
+      }
+   }
+   &__top{
+      display: flex;
+      justify-content: space-between;
+      position: relative;
+   }
+   &__title{
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 22px;
+      margin-bottom: 12px;
+   }
+   &__radio{
+      margin-bottom: 24px;
+   }
+   &__other{
+      input{
+         margin-left: 8px;
+      }
+   }
+   &__descr{
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 18px;
+      margin-bottom: 24px;
+   }
+   &__calendar{
+      margin-bottom: 32px;
+   }
+   &__project-link{
+      display: block;
+      margin-bottom: 32px;
+      color: $main-color;
+      font-weight: 500;
+      transition: all .3s;
+      &:hover{
+         color: $main-blue;
+      }
+   }
+   &__project-name{
+      margin-bottom: 16px;
+      span{
+         font-size: inherit;
+         color: $main-blue;
+      }
+   }
+   .modal__ready{
+      display: flex;
+      align-items: center;
+      &:hover{
+         color: #FFFFFF;
+      }
+      
    }
 }
