--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -7,10 +7,20 @@
    border-radius: 5px;
    border: none;
    outline: none;
+   transition: all .4s;
    &:disabled{
       background-color: $blue-disabled;
    }
    &:hover:not(:disabled){
       background-color: $blue-hover;
+   }
+   &_linear{
+      border: 1px solid $main-blue;
+      color: $main-blue;
+      background-color: #FFFFFF;
+      &:hover:not(:disabled){
+         color: #FFFFFF;
+         background-color: $main-blue;
+      }
    }
 }
